--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -249,6 +249,11 @@
 
       </div>
 
+      <!--версия-->
+      <div class="div_ver" style="position: absolute; left: 0px; bottom: 30px; width: var(--width-left-bar)" align="left">
+        <p style="margin: 10px 10px"><a href="">ver: {{ version }}</a></p>
+      </div>
+
       <!--кнопка для выхода из аккаунта-->
       <div class="button_exit_style block_select button_margin" onclick="logout()">
         <img class="icon_topBar" width="20" height="20" src="static/img/logout.svg">
