--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -258,17 +258,13 @@
           <label for="lightThame_chekcbox"><p class="top_bar_font_color">Light theme</p></label>
         </div>
 
-        <!--<div style="position: absolute; top: 85px; left: 15px;">
-          <input type="checkbox" class="custom-checkbox top_checkBox" id="darkThame_chekcbox" name="darkThame_chekcbox" value="yes" onchange="(this)">
-          <label for="darkThame_chekcbox"><p class="top_bar_font_color">Dark theme</p></label>
-        </div>
-
-        <div style="position: absolute; top: 115px; left: 15px;">
-          <input type="checkbox" class="custom-checkbox top_checkBox" id="systemThame_chekcbox" name="systemThame_chekcbox" value="yes" onchange="(this)">
-          <label for="systemThame_chekcbox"><p class="top_bar_font_color">System theme</p></label>
-        </div>-->
-
       </div>
+
+      <!--версия-->
+      <div class="div_ver" style="position: absolute; left: 0px; bottom: 30px; width: var(--width-left-bar)" align="left">
+        <p style="margin: 10px 10px"><a href="">ver: {{ version }}</a></p>
+      </div>
+
       <!--кнопка для выхода из аккаунта-->
       <div class="button_exit_style block_select button_margin" onclick="logout()">
         <img class="icon_topBar" width="20" height="20" src="static/img/logout.svg">
