--- a/app/templates/editor.html
+++ b/app/templates/editor.html
@@ -14,6 +14,7 @@
 
     <textarea id="lines_area" class="lines_area" name="name" wrap='off' readonly unselectable="on">1</textarea>
     <textarea id="code_area" class="code_area scroll_style" name="name" wrap='off'></textarea>
+    
     <div class="topBar">
       <p id="save_state" style="position: absolute; display: none; font-size: 25px; margin: -9px 0px; left: 85px;">•</p>
       <p style="position: absolute; margin: auto; left: 98px;">{{ data[2] }}</p>
@@ -21,6 +22,11 @@
         <p align="center">save</p>
       </div>
     </div>
+
+    <div class="bottomBar">
+
+    </div>
+    
   </body>
 
   <script type="text/javascript">
