--- a/app/static/css/editor.1.css
+++ b/app/static/css/editor.1.css
@@ -1,84 +1,43 @@
 :root {
-  --lines-area-color: #24282B;
-
   --size-bars: 25px;
-  --size-lines-number: 40px;
+
+  --color-top-bars: #2D3237;
+  --color-bars: #1D2125;
+  --color-borders-bars: #1D2125;
+  --color-buttons-bars: #1D2125;
+  --color-buttons-hover-bars: #2F363D;
+  /* --color-font-bars: #D1D5DA; */
+  --color-font-bars: #C1C2BF;
+
 }
 
 [data-theme = "light"] {
-  --lines-area-color: #EBEEF1;
+
 }
 
 .CodeMirror * {
   /* font-family: Arial, monospace; */
-  font-size: 12px;
+  font-size: 14px;
 }
-  
+
 
 .code_form {
   position: absolute;
   top: calc(var(--size-bars) + 1px);
   left: 0px;
   right: 0px;
-  bottom: calc(var(--size-bars) - 12px);
+  bottom: calc(var(--size-bars) - 13px);
   /* width: calc(1220px + var(--scalex)); */
   /*height: calc(694px + var(--scaley));*/
 
   resize: none;
-}
-
-.code_area {
-  position: absolute;
-  top: calc(var(--size-bars) + 1px);
-  left: var(--size-lines-number);
-  right: 0px;
-  bottom: calc(var(--size-bars) + 1px);
-  /* width: calc(1220px + var(--scalex)); */
-  /*height: calc(694px + var(--scaley));*/
-
-  resize: none;
-
-  color: var(--main-font-color);
-  padding: 0px 5px;
-
-  background-color: var(--bg-color);
-  border-color: var(--bg-color);
-  border-left: 1px solid var(--main-border-color);
-}
-
-.code_area:focus {
-  outline: none !important;
-}
-
-.lines_area {
-  position: absolute;
-  top: calc(var(--size-bars) + 1px);
-  left: 0px;
-  width: var(--size-lines-number);
-  bottom: calc(var(--size-bars) + 1px);
-
-  overflow-y: hidden;
-
-  text-align: right;
-  color: #B1B1B2;
-  padding: 0px 5px;
-
-  background-color: var(--lines-area-color);
-  border-color: var(--lines-area-color);
-  resize: none;
-
-  cursor: default;
-}
-
-.lines_area:focus {
-  outline: none !important;
 }
 
 /**/
 
 .topBar {
   position: fixed;
-  background-color: var(--top-color);
+  background-color: var(--color-bars);
 
   top: 0px;
   left: 0px;
@@ -89,7 +48,7 @@
 }
 
 .topBar p {
-  color: var(--top-font-color);
+  color: var(--color-font-bars);
 }
 
 .topBar_button {
@@ -100,14 +59,14 @@
 
   height: 25px;
 
-  background-color: var(--top-color);
+  background-color: var(--color-buttons-bars);
 
   cursor: pointer;
 }
 
 .topBar_button p {
   margin: 0px auto;
-  color: var(--top-font-color);
+  color: var(--color-font-bars);
 }
 
 .topBar_button:hover {
@@ -117,7 +76,7 @@
 /**/
 .bottomBar {
   position: fixed;
-  background-color: var(--top-color);
+  background-color: var(--color-bars);
 
   bottom: 0px;
   left: 0px;
@@ -125,4 +84,26 @@
   height: var(--size-bars);
 
   border-top: 1px solid var(--top-border-color);
+
+}
+
+.bottomBar p {
+  color: var(--color-font-bars);
+  display: inline;
+}
+
+.selector {
+  position: relative;
+  color: var(--color-font-bars);
+  border: none;
+  /*background-color: #0D1117;*/
+  background-color: var(--color-bars);
+  padding: 0px 0px;
+  border-radius: none;
+  height: var(--size-bars);
+  clip-path: None;
+}
+
+.selector:focus {
+  outline: none;
 }
