--- a/app/templates/editor.html
+++ b/app/templates/editor.html
@@ -20,25 +20,126 @@
     </form>
 
     <div class="topBar">
-      <p id="save_state" style="position: absolute; display: none; font-size: 25px; margin: -9px 0px; left: 85px;">•</p>
-      <p style="position: absolute; margin: auto; left: 98px;">{{ data[2] }}</p>
       <div class="topBar_button" style="left: 0px; width: 70px;" onclick="save()">
-        <p align="center">save</p>
+        <p align="center">File</p>
       </div>
+      <div class="topBar_button" style="left: 70px; width: 70px;" onclick="save()">
+        <p align="center">Edit</p>
+      </div>
+      <p id="save_state" align="center" style="position: absolute; display: none; font-size: 25px; margin: -9px calc(50% - 20px); left: 8px;">•</p>
+      <p style="position: absolute; margin: 0px 50%" align="center">{{ data[3] }}</p>
+
+      <label for="theme_list" style="position: absolute; left: 150px; top: 0px; color: var(--color-font-bars)">
+        Theme:
+        <select onchange="set_theme(this)" class="selector" id="theme_list" style="">
+          <option selected="">default</option>
+          <option>3024-day</option>
+          <option>3024-night</option>
+          <option>abbott</option>
+          <option>abcdef</option>
+          <option>ambiance</option>
+          <option>ayu-dark</option>
+          <option>ayu-mirage</option>
+          <option>base16-dark</option>
+          <option>base16-light</option>
+          <option>bespin</option>
+          <option>blackboard</option>
+          <option>cobalt</option>
+          <option>colorforth</option>
+          <option>darcula</option>
+          <option>dracula</option>
+          <option>duotone-dark</option>
+          <option>duotone-light</option>
+          <option>eclipse</option>
+          <option>elegant</option>
+          <option>erlang-dark</option>
+          <option>gruvbox-dark</option>
+          <option>hopscotch</option>
+          <option>icecoder</option>
+          <option>idea</option>
+          <option>isotope</option>
+          <option>juejin</option>
+          <option>lesser-dark</option>
+          <option>liquibyte</option>
+          <option>lucario</option>
+          <option>material</option>
+          <option>material-darker</option>
+          <option>material-palenight</option>
+          <option>material-ocean</option>
+          <option>mbo</option>
+          <option>mdn-like</option>
+          <option>midnight</option>
+          <option>monokai</option>
+          <option>moxer</option>
+          <option>neat</option>
+          <option>neo</option>
+          <option>night</option>
+          <option>nord</option>
+          <option>oceanic-next</option>
+          <option>panda-syntax</option>
+          <option>paraiso-dark</option>
+          <option>paraiso-light</option>
+          <option>pastel-on-dark</option>
+          <option>railscasts</option>
+          <option>rubyblue</option>
+          <option>seti</option>
+          <option>shadowfox</option>
+          <option>solarized dark</option>
+          <option>solarized light</option>
+          <option>the-matrix</option>
+          <option>tomorrow-night-bright</option>
+          <option>tomorrow-night-eighties</option>
+          <option>ttcn</option>
+          <option>twilight</option>
+          <option>vibrant-ink</option>
+          <option>xq-dark</option>
+          <option>xq-light</option>
+          <option>yeti</option>
+          <option>yonce</option>
+          <option>zenburn</option>
+        </select>
+      </label>
     </div>
 
     <div class="bottomBar">
+      <p style="margin: 0px 8px">{{ data[1] }}:/{{ data[2] }}/{{ data[3] }}</p>
+      <p id="cursor_pos"></p>
 
+
+      <label for="selector_space" style="position: absolute; right: 100px;">
+        <p style="">spaces: </p>
+        <select id="selector_space" class="selector" style="" onchange="">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+        </select>
+      </label>
+
+      <select id="" class="selector" style="position: absolute; right: 0px;" onchange="set_mode(this)">
+        <option value="default">Default</option>
+        <!-- <option value="JavaScript">JavaScript</option> -->
+        <option value="python">Python</option>
+        <option value="text/x-csrc">C</option>
+        <option value="text/x-c++src">C++</option>
+        <option value="text/x-java">Java</option>
+        <!-- <option value="clike">C-Like</option> -->
+      </select>
     </div>
-    
+
   </body>
 
   <script type="text/javascript">
     var path = '{{ data[0] }}';
-    var dir_str = '{{ data[1] }}';
-    var name = '{{ data[2] }}';
+    var path_name = '{{ data[1] }}';
+    var dir_str = '{{ data[2] }}';
+    var name = '{{ data[3] }}';
 
     editor_for_source_code.setSize("100%", "100%");
+    editor_for_source_code.clearHistory();
+
   </script>
 
   <script type="text/javascript" src="static/js/main.1.js"></script>
@@ -48,4 +149,3 @@
   <script type="text/javascript" src="static/js/editor.1.js"></script>
 
 </html>
-  
