--- a/app/templates/editor.html
+++ b/app/templates/editor.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href = "static/css/editor.1.css"/>
 
     {{ codemirror.include_codemirror() }}
+    {{ codemirror_themes | safe }}
 
   </head>
 
@@ -29,74 +30,14 @@
       <p id="save_state" align="center" style="position: absolute; display: none; font-size: 25px; margin: -9px calc(50% - 20px); left: 8px;">•</p>
       <p style="position: absolute; margin: 0px 50%" align="center">{{ data[3] }}</p>
 
-      <label for="theme_list" style="position: absolute; left: 150px; top: 0px; color: var(--color-font-bars)">
+      <label for="set_theme" style="position: absolute; left: 150px; top: 0px; color: var(--color-font-bars)">
         Theme:
-        <select onchange="set_theme(this)" class="selector" id="theme_list" style="">
-          <option selected="">default</option>
-          <option>3024-day</option>
-          <option>3024-night</option>
-          <option>abbott</option>
-          <option>abcdef</option>
-          <option>ambiance</option>
-          <option>ayu-dark</option>
-          <option>ayu-mirage</option>
-          <option>base16-dark</option>
-          <option>base16-light</option>
-          <option>bespin</option>
-          <option>blackboard</option>
-          <option>cobalt</option>
-          <option>colorforth</option>
-          <option>darcula</option>
-          <option>dracula</option>
-          <option>duotone-dark</option>
-          <option>duotone-light</option>
-          <option>eclipse</option>
-          <option>elegant</option>
-          <option>erlang-dark</option>
-          <option>gruvbox-dark</option>
-          <option>hopscotch</option>
-          <option>icecoder</option>
-          <option>idea</option>
-          <option>isotope</option>
-          <option>juejin</option>
-          <option>lesser-dark</option>
-          <option>liquibyte</option>
-          <option>lucario</option>
-          <option>material</option>
-          <option>material-darker</option>
-          <option>material-palenight</option>
-          <option>material-ocean</option>
-          <option>mbo</option>
-          <option>mdn-like</option>
-          <option>midnight</option>
-          <option>monokai</option>
-          <option>moxer</option>
-          <option>neat</option>
-          <option>neo</option>
-          <option>night</option>
-          <option>nord</option>
-          <option>oceanic-next</option>
-          <option>panda-syntax</option>
-          <option>paraiso-dark</option>
-          <option>paraiso-light</option>
-          <option>pastel-on-dark</option>
-          <option>railscasts</option>
-          <option>rubyblue</option>
-          <option>seti</option>
-          <option>shadowfox</option>
-          <option>solarized dark</option>
-          <option>solarized light</option>
-          <option>the-matrix</option>
-          <option>tomorrow-night-bright</option>
-          <option>tomorrow-night-eighties</option>
-          <option>ttcn</option>
-          <option>twilight</option>
-          <option>vibrant-ink</option>
-          <option>xq-dark</option>
-          <option>xq-light</option>
-          <option>yeti</option>
-          <option>yonce</option>
-          <option>zenburn</option>
+        <select onchange="setOption('theme', this)" class="selector" id="set_theme" style="">
+          <option value="default">default</option>
+          <option value="eclipse">eclipse</option>
+          <option value="midnight">midnight</option>
+          <option value="material">material</option>
+          <option value="3024-night">3024-night</option>
         </select>
       </label>
     </div>
@@ -106,9 +47,9 @@
       <p id="cursor_pos"></p>
 
 
-      <label for="selector_space" style="position: absolute; right: 100px;">
+      <label for="set_tabSize" style="position: absolute; right: 100px;">
         <p style="">spaces: </p>
-        <select id="selector_space" class="selector" style="" onchange="">
+        <select id="set_tabSize" class="selector" style="" onchange="setOption('tabSize', this)">
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -118,8 +59,8 @@
         </select>
       </label>
 
-      <select id="" class="selector" style="position: absolute; right: 0px;" onchange="set_mode(this)">
-        <option value="default">Default</option>
+      <select id="set_mode" class="selector" style="position: absolute; right: 0px;" onchange="setOption('mode', this)">
+        <option value="text/plain">Default</option>
         <!-- <option value="JavaScript">JavaScript</option> -->
         <option value="python">Python</option>
         <option value="text/x-csrc">C</option>
