экспорт файлов в редакторе

--- a/app/templates/editor.html
+++ b/app/templates/editor.html
@@ -49,7 +49,7 @@
         <p style="">Save</p>
         <p align="right" style="float: right">Ctrl + S</p>
       </div>
-      <div class="drop_down_menu_button block_select" onclick="close_all_drop_down_menu();">
+      <div class="drop_down_menu_button block_select" onclick="export_file(); close_all_drop_down_menu();">
         <p>Export</p>
         <p align="right" style="float: right">Ctrl + Shift + S</p>
       </div>
