--- a/app/templates/editor.html
+++ b/app/templates/editor.html
@@ -28,7 +28,7 @@
         <p align="center">Edit</p>
       </div>
       <p id="save_state" align="center" style="position: absolute; display: none; font-size: 25px; margin: -9px calc(50% - 20px); left: 8px;">•</p>
-      <p style="position: absolute; margin: 0px 50%" align="center">{{ data[3] }}</p>
+      <p style="position: absolute; margin: 0px 50%; white-space: nowrap;" align="center">{{ data[3] }}</p>
 
       <label for="" style="position: absolute; left: 150px; top: 0px; color: var(--color-font-bars)">
         Theme:
