--- a/app/static/css/rightBar.1.css
+++ b/app/static/css/rightBar.1.css
@@ -138,6 +138,46 @@
   background-color: var(--bg-color);
 }
 
+.preview_display_type {
+  position: relative;
+  left: 0px;
+  top: 0px;
+  height: 25px;
+  width: 300px;
+
+  /* border-bottom: 1px solid var(--main-border-color); */
+  border-top: 1px solid var(--main-border-color);
+
+  background-color: var(--bg-color);
+
+  color: var(--main-font-color);
+}
+
+.preview_rendering_selector {
+  /* width: 140px; */
+  height: 25px;
+  border-right: 1px solid var(--main-border-color);
+  border-left: 1px solid var(--main-border-color);
+  border-top: none;
+  border-bottom: none;
+  background-color: var(--bg-color);
+
+  cursor: pointer;
+  color: var(--main-font-color);
+
+  border-radius: none;
+  clip-path: None;
+
+}
+
+.preview_rendering_selector:focus {
+  outline: none;
+}
+
+.preview_rendering_selector:hover {
+  background-color: var(--top-hover-color);
+}
+
 /* list files */
 
 .file_activity_button {
