--- a/app/static/css/login.1.css
+++ b/app/static/css/login.1.css
@@ -14,6 +14,22 @@
 
   }
 
+  .login_warning {
+    position: absolute;
+
+    /*top: 121px;*/
+    top: 50px;
+    right: 0px;
+
+    height: 30px;
+    width: 400px;
+
+    background-color: var(--main-red-color);
+    border-top: 1px solid var(--main-border-color);
+    /* border-bottom: 1px solid var(--main-border-color); */
+
+  }
+
   .login_container {
     position: absolute;
 
@@ -65,6 +81,22 @@
 
     height: 100%;
     width: 100%;
+
+  }
+
+  .login_warning {
+    position: absolute;
+
+    /*top: 121px;*/
+    top: 50px;
+    right: 0px;
+
+    height: 30px;
+    width: 100%;
+
+    background-color: var(--main-red-color);
+    border-top: 1px solid var(--main-border-color);
+    /* border-bottom: 1px solid var(--main-border-color); */
 
   }
 
