--- a/app/static/css/login.1.css
+++ b/app/static/css/login.1.css
@@ -1,5 +1,5 @@
 
-@media screen and (orientation: landscape) {
+@media screen and (min-width: 768px) {
   .login_class {
     position:absolute;
 
@@ -70,7 +70,7 @@
   }
 }
 
-@media screen and (orientation: portrait) {
+@media screen and (max-width: 768px) {
   .login_class {
     position:absolute;
 
