--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href = "static/css/main.1.css"/>
 
     <link rel="stylesheet" href = "static/css/login.1.css"/>
+    <link rel="stylesheet" href = "static/css/checkBox.1.css"/>
+
   </head>
 
-  <body bgcolor = "#24292E">
+  <body bgcolor = "#24292E" style="overflow: hidden;">
     <div class="login_class">
       <!--<div class="login_name_container">
         <img class="icon" style="margin: 7px 10px;" width="25" height="25" src="static/img/lock.svg">
@@ -28,6 +30,12 @@
           <div class="login_button block_select" onclick="login()">
             <p style="margin: 8px 50px">login</p>
           </div>
+
+          <div style="position: absolute; bottom: -5px; right: 20px;">
+            <input type="checkbox" class="custom-checkbox" id="remember_chekcbox" name="remember_chekcbox">
+            <label for="remember_chekcbox"><p class="main_font_color">Remember me</p></label>
+          </div>
+
         </div>
 
         <div id="loading_login" style="display: none">
