--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -311,6 +311,7 @@
 
     <!--диалоговые окна-->
 
+    <!-- нехватка места -->
     <div id="dialog_no_place" class="dialog_style" style="height: 160px;">
       <div class="dialog_top_name">
         <div class="dialog_close_button block_select button_margin" onclick="close_no_place_dialog()">
