добавление пользователя в панели (унстабле)

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -202,6 +202,10 @@
       <div class="border border_size">
         <ul id="userlist" class="loglist"></ul>
       </div>
+      <div class="main_page_button block_select" style="width: 130px; margin: 10px; display: inline-block;" onclick="add_new_user()">
+        <img style="margin: 5px 5px" class="icon" width="20" height="20" src="static/img/add.svg">
+        <p style="margin: -27px 35px">add user</p>
+      </div>
     </div>
 
     <!--memory-->
