--- a/app/static/css/login.1.css
+++ b/app/static/css/login.1.css
@@ -1,5 +1,19 @@
 
 @media screen and (min-width: 768px) {
+  .info_class {
+    display: none;
+    position:absolute;
+
+    background-color: var(--right-color);
+    border: 1px solid var(--main-border-color);
+
+    left: 0px;
+    top: 0px;
+    right: 500px;
+    height: 50px;
+
+  }
+
   .login_class {
     position:absolute;
 
@@ -71,6 +85,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .info_class {
+    display: none;
+  }
+
   .login_class {
     position:absolute;
 
