--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -68,6 +68,12 @@
           </div>
         </th></tr>
         <tr><th>
+          <div class="left_bar_button" id="left_bar_terminal" onclick="open_page('terminal')">
+            <img class="icon" width="18" height="18" src="static/img/admin/terminal.svg">
+            <p align="left">terminal</p>
+          </div>
+        </th></tr>
+        <tr><th>
           <hr class="left_bar_hr">
         </th></tr>
         <tr><th>
@@ -280,6 +286,21 @@
           </th>
         </tr>
       </table>
+
+    </div>
+
+    <!--terminal-->
+    <div class="main_page" id="terminal" style="display: none;">
+      <div class="border border_size">
+        <div class="name_area_border border_size" style="height: 52px">
+          <img class="icon" width="30" height="30" src="static/img/admin/terminal.svg">
+          <h2>Terminal</h2>
+        </div>
+        <hr class="main_page_hr">
+
+      </div>
+      <br>
+
 
     </div>
 
