--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -48,14 +48,13 @@
 
       </div>
 
-
       <!--версия-->
       <div class="div_ver" style="position: absolute; left: 0px; bottom: 0px; width: 100%" align="left">
         <p style="margin: 10px 10px"><a href="">ver: {{ version }}</a></p>
       </div>
     </div>
 
-    <div class="shared_files_class">
+    <div class="info_class">
 
     </div>
 
