перенаправление на гит

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -276,7 +276,7 @@
       </div>
 
       <!--версия-->
-      <div class="div_ver" style="position: absolute; left: 0px; bottom: 30px; width: var(--width-left-bar)" align="left">
+      <div class="div_ver" style="position: absolute; left: 0px; bottom: 30px; width: var(--width-left-bar)" align="left" onclick="open_git_releases()">
         <p style="margin: 10px 10px"><a href="">ver: {{ version }}</a></p>
       </div>
 
