--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -44,9 +44,9 @@
           </div>
         </th></tr>
         <tr><th>
-          <div class="left_bar_button" id="left_bar_memory" onclick="open_page('memory')">
-            <img class="icon" width="18" height="18" src="static/img/dvd-disk.svg">
-            <p align="left">memory</p>
+          <div class="left_bar_button" id="left_bar_templates" onclick="open_page('templates')">
+            <img class="icon" width="18" height="18" src="static/img/copy.svg">
+            <p align="left">templates</p>
           </div>
         </th></tr>
         <tr><th>
@@ -214,19 +214,28 @@
       </div>
     </div>
 
-    <!--memory-->
-    <div class="main_page" id="memory" style="display: none;">
+    <!--templates-->
+    <div class="main_page" id="templates" style="display: none;">
       <div class="border border_size">
         <div class="name_area_border border_size" style="height: 52px">
-          <img class="icon" width="30" height="30" src="static/img/dvd-disk.svg">
-          <h2>Memory</h2>
+          <img class="icon" width="30" height="30" src="static/img/copy.svg">
+          <h2>Templates</h2>
         </div>
         <hr class="main_page_hr">
-        <p>hello</p>
+        <div class="main_page_button block_select" style="width: 100px; margin: 10px" onclick="get_templates()">
+          <img style="margin: 5px 5px" class="icon" width="20" height="20" src="static/img/admin/refresh.svg">
+          <p style="margin: -25px 35px">refresh</p>
+        </div>
+        <div class="main_page_button block_select" style="width: 160px; margin: 10px; right: 0px; top: 54px; position: absolute;" onclick="add_new_template()">
+          <img style="margin: 5px 5px" class="icon" width="20" height="20" src="static/img/admin/add.svg">
+          <p style="margin: -25px 35px">add template</p>
+        </div>
       </div>
-      <br>
-      <div class="border border_size">
-        <ul id="templateslist" class="loglist"></ul>
+
+      <div class="border_size">
+
+        <ul id="templateslist" class="path_list_grid"></ul>
+
       </div>
     </div>
 
