IN FUTURE UPDATES

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -306,11 +306,10 @@
           <h2>Terminal</h2>
         </div>
         <hr class="main_page_hr">
-
+        <h2 align="center">IN FUTURE UPDATES</h2>
       </div>
       <br>
-
-
+      
     </div>
 
   </body>
