--- a/app/static/css/dialog.1.css
+++ b/app/static/css/dialog.1.css
@@ -1,3 +1,41 @@
+@media screen and (min-width: 768px) {
+  .dialog_style {
+    position: absolute;
+    display: none;
+
+    left: 50%;
+    top: 20%;
+
+    width: 600px;
+    height: 200px;
+
+    margin: 0px -300px;
+
+    background-color: var(--bg-color);
+    border-radius: 5px;
+    border: 1px solid var(--main-border-color);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .dialog_style {
+    position: absolute;
+    display: none;
+
+    left: 50%;
+    top: 20%;
+
+    width: 80%;
+    height: 200px;
+
+    margin: 0px -40%;
+
+    background-color: var(--bg-color);
+    border-radius: 5px;
+    border: 1px solid var(--main-border-color);
+  }
+}
+
 .dialog_backgound {
   position: fixed;
   display: none;
@@ -11,22 +49,7 @@
   opacity: .5;
 }
 
-.dialog_style {
-  position: absolute;
-  display: none;
 
-  left: 50%;
-  top: 20%;
-
-  width: 600px;
-  height: 200px;
-
-  margin: 0px -300px;
-
-  background-color: var(--bg-color);
-  border-radius: 5px;
-  border: 1px solid var(--main-border-color);
-}
 
 .dialog_top_name {
   position: absolute;
@@ -73,8 +96,9 @@
   position: absolute;
 
   left: 60px;
+  right: 20px;
   top: 10px;
-  width: 500px;
+  /* width: 500px; */
 
   background-color: var(--main-input-color);
 }
