--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -49,8 +49,8 @@
       </div>
 
       <!--версия-->
-      <div class="div_ver" style="position: absolute; left: 0px; bottom: 0px; width: 100%" align="left" onclick="open_git_releases()">
-        <p style="margin: 10px 10px"><a href="">ver: {{ version }}</a></p>
+      <div class="div_ver" style="position: absolute; left: 0px; bottom: 0px; width: 100%" align="left">
+        <p style="margin: 10px 10px"><a href="javascript:open_git_releases()">ver: {{ version }}</a></p>
       </div>
     </div>
 
