--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -276,8 +276,8 @@
       </div>
 
       <!--версия-->
-      <div class="div_ver" style="position: absolute; left: 0px; bottom: 30px; width: var(--width-left-bar)" align="left" onclick="open_git_releases()">
-        <p style="margin: 10px 10px"><a href="">ver: {{ version }}</a></p>
+      <div class="div_ver" style="position: absolute; left: 0px; bottom: 30px; width: var(--width-left-bar)" align="left">
+        <p style="margin: 10px 10px"><a href="javascript:open_git_releases()">ver: {{ version }}</a></p>
       </div>
 
       <!--кнопка для выхода из аккаунта-->
