--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -311,6 +311,24 @@
 
     <!--диалоговые окна-->
 
+    <!-- только для чтения -->
+    <div id="dialog_readonly" class="dialog_style" style="height: 160px;">
+      <div class="dialog_top_name">
+        <div class="dialog_close_button block_select button_margin" onclick="close_readonly_dialog()">
+          <img class="icon" width="20" height="20" src="static/img/cross.svg">
+          <p>close</p>
+        </div>
+      </div>
+
+      <img class="icon" width="60" height="60" style="position: absolute; right: 30px; top: 45px;" src="static/img/warning.svg">
+      <h3 style="position: absolute; top: 40px; left: 110px;" align="right">This path is read-only.</h3>
+      <p style="position: absolute; top: 70px; left: 50px;" align="right"></p>
+
+      <div class="dialog_button block_select" style="left: 10px; bottom: 10px; width: 100px;" onclick="close_readonly_dialog()">
+        <p style="margin: 5px 40px">ok</p>
+      </div>
+    </div>
+
     <!-- нехватка места -->
     <div id="dialog_no_place" class="dialog_style" style="height: 160px;">
       <div class="dialog_top_name">
