--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -134,6 +134,15 @@
               </label>
             </div>
           </div>
+
+          <div class="preview_image" id="preview_video_div">
+            <video id="preview_video" width="300px" controls></video>
+          </div>
+
+          <div class="preview_image" id="preview_audio_div">
+            <audio id="preview_audio" style="margin: 5px 0px" width="300px" controls></video>
+          </div>
+          
         </div>
 
       </div>
