--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -133,7 +133,7 @@
         <div id="file_activity_view">
           <div class="preview_info">
             <div style="position: absolute; margin: -7px 12px">
-              <input type="checkbox" class="custom-checkbox" id="checkbox_preview_image" name="checkbox_preview_image" value="yes" onchange="load_preview_image()">
+              <input type="checkbox" class="custom-checkbox" id="checkbox_preview_image" name="checkbox_preview_image" value="yes" onchange="load_preview()">
               <label for="checkbox_preview_image"><p>show preview</p></label>
             </div>
           </div>
@@ -155,6 +155,13 @@
             </div>
           </div>
 
+          <div class="preview_image" id="preview_video_div">
+            <video id="preview_video" width="300px" controls></video>
+          </div>
+
+          <div class="preview_image" id="preview_audio_div">
+            <audio id="preview_audio" style="margin: 5px 0px" width="300px" controls></video>
+          </div>
 
         </div>
 
