--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -140,9 +140,9 @@
           </div>
 
           <div class="preview_image" id="preview_audio_div">
-            <audio id="preview_audio" style="margin: 5px 0px" width="300px" controls></video>
+            <audio id="preview_audio" style="margin: 5px 0px" width="300px" controls></audio>
           </div>
-          
+
         </div>
 
       </div>
