--- a/app/static/css/mobile/fileinfoBar.1.css
+++ b/app/static/css/mobile/fileinfoBar.1.css
@@ -12,6 +12,19 @@
   border-top: 1px solid var(--main-border-color);
 }
 
+.rightBar_select_files {
+  position: fixed;
+
+  bottom: 0px;
+  left: 0px;
+  height: 250px;
+  width: 100%;
+
+  background-color: var(--right-color)/*var(--bg-color)*/;
+
+  border-top: 1px solid var(--main-border-color);
+}
+
 .fileName_input {
   position: absolute;
 
@@ -103,23 +116,170 @@
 .preview_image {
   position: absolute;
   left: 0px;
-  top: 350px;
+  bottom: calc(250px + 25px);
   width: 100%;
 
   /*border-top: 1px solid var(--main-border-color);*/
   border-bottom: 1px solid var(--main-border-color);
+  border-top: 1px solid var(--main-border-color);
+  background-color: var(--bg-color);
+}
+
+.preview_display_type {
+  position: absolute;
+  left: 0px;
+  bottom: -25px;
+  /* margin: -25px 0px; */
+  height: 25px;
+  width: 100%;
+
+  /* border-bottom: 1px solid var(--main-border-color); */
+  border-top: 1px solid var(--main-border-color);
+
+  background-color: var(--bg-color);
+
+  color: var(--main-font-color);
+}
+
+.preview_rendering_selector {
+  /* width: 140px; */
+  height: 25px;
+  border-right: 1px solid var(--main-border-color);
+  border-left: 1px solid var(--main-border-color);
+  border-top: none;
+  border-bottom: none;
+  background-color: var(--bg-color);
+
+  cursor: pointer;
+  color: var(--main-font-color);
+
+  border-radius: none;
+  clip-path: None;
+
+}
+
+.preview_rendering_selector:focus {
+  outline: none;
+}
+
+.preview_video_fullscreen {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: #000;
+}
+
+.preview_video_fullscreen img {
+  margin: 10px;
+  cursor: pointer;
+}
+
+.preview_video_fullscreen_video {
+  position: fixed;
+  top: 25px;
+  left: 0px;
+  width: 100%;
+  height: calc(100% - 50px);
+}
+
+.preview_video_fullscreen_controls {
+  position: fixed;
+
+  bottom: 0px;
+  left: 0px;
+
+  height: 25px;
+  width: 100%;
+  border-top: 1px solid var(--main-border-color);
+}
+
+.preview_video {
+  position: absolute;
+  left: 0px;
+  bottom: 250px;
+  width: 100%;
+
+  /*border-top: 1px solid var(--main-border-color);*/
+  border-bottom: 1px solid var(--main-border-color);
+  border-top: 1px solid var(--main-border-color);
+  background-color: #000;
 
   cursor: pointer;
 }
 
-.preview_info {
+.preview_video_controls {
+  height: 25px;
+  width: 100%;
+  border-top: 1px solid var(--main-border-color);
+  background-color: var(--bg-color);
+}
+
+.preview_video img {
+  margin: 10px;
+  cursor: pointer;
+}
+
+.preview_video img:hover {
+  filter: invert(50%);
+}
+
+.preview_video_duration_info {
+  display: none;
+  position: fixed;
+  overflow:hidden;
+}
+
+.preview_audio {
   position: absolute;
   left: 0px;
-  top: 315px;
-  height: 35px;
+  bottom: 250px;
   width: 100%;
 
+  /*border-top: 1px solid var(--main-border-color);*/
+  border-bottom: 1px solid var(--main-border-color);
   border-top: 1px solid var(--main-border-color);
+  background-color: var(--bg-color);
+
+  cursor: pointer;
+}
+
+.preview_audio_name {
+  position: absolute;
+  color: var(--main-font-color);
+  border: 1px solid var(--bg-color);
+  /*background-color: #0D1117;*/
+  background-color: var(--bg-color);
+
+  font-size: 14px;
+
+  padding: 12px 10px;
+  margin: 8px 0;
+  border-radius: 5px;
+  height: 30px;
+
+}
+
+.preview_audio img {
+  margin: 10px;
+  cursor: pointer;
+}
+
+.preview_audio img:hover {
+  filter: invert(50%);
+}
+
+.preview_info {
+  position: absolute;
+  right: 0px;
+  /* top: 315px; */
+  height: 35px;
+  width: 150px;
+
+  border-left: 1px solid var(--main-border-color);
   border-bottom: 1px solid var(--main-border-color);
 
   background-color: var(--bg-color);
