--- a/app/static/css/rightBar.1.css
+++ b/app/static/css/rightBar.1.css
@@ -119,8 +119,8 @@
   top: 350px;
   width: 300px;
 
-  /*border-top: 1px solid var(--main-border-color);*/
   border-bottom: 1px solid var(--main-border-color);
+  background-color: var(--bg-color);
 
   cursor: pointer;
 }
