--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href = "static/css/mobile/bottomBar.1.css"/>
     <link rel="stylesheet" href = "static/css/mobile/fileinfoBar.1.css"/>
     <link rel="stylesheet" href = "static/css/mobile/addFileMenu.1.css"/>
+    <link rel="stylesheet" href = "static/css/range.1.css"/>
     <link rel="stylesheet" href = "static/css/mobile/dialog.1.css"/>
 
   </head>
   <body class="scroll_style">
     <input id="path" class="" style="display: none" type=text placeholder="Path" onkeypress="">
-    <input type="checkbox" class="custom-checkbox" style="display: none;" id="checkbox_preview_image" name="checkbox_preview_image" value="yes" onchange="load_preview_image()">
 
     <div id="file_list_div" class="file_list">
       <ul id="file_list" style="overflow-x:hidden;"></ul>
@@ -56,6 +56,13 @@
       <div class="file_close_button block_select button_margin" onclick="close_rightBar()">
         <img class="icon" width="20" height="20" src="static/img/cross.svg">
         <p>close</p>
+      </div>
+
+      <div class="preview_info" id="checkbox_preview_image_div">
+        <div style="position: absolute; margin: -7px 12px">
+          <input type="checkbox" class="custom-checkbox" id="checkbox_preview_image" name="checkbox_preview_image" value="yes" onchange="load_preview()">
+          <label for="checkbox_preview_image"><p>show preview</p></label>
+        </div>
       </div>
 
       <!--информация о выбранном файле-->
@@ -111,15 +118,8 @@
 
         <!--продпросмотр фотографии-->
         <div id="file_activity_view">
-          <div class="preview_info">
-            <div style="position: absolute; margin: -7px 12px">
-              <input type="checkbox" class="custom-checkbox" id="checkbox_preview_image" name="checkbox_preview_image" value="yes" onchange="load_preview_image()">
-              <label for="checkbox_preview_image"><p>show preview</p></label>
-            </div>
-          </div>
-
           <div class="preview_image" id="preview_image_div">
-            <img id="preview_image" class="" width="300px" src="" />
+            <img id="preview_image" class="" width="100%" src="" />
 
             <div class="preview_display_type">
               <label for="" style="position: absolute; margin: 0px 10px;">
@@ -135,12 +135,27 @@
             </div>
           </div>
 
-          <div class="preview_image" id="preview_video_div">
-            <video id="preview_video" width="300px" controls></video>
+          <div class="preview_video" id="preview_video_div">
+            <video id="preview_video" width="100%" onclick="play_video()"></video>
+            <div class="preview_video_controls">
+              <img id="preview_play_pause_video" class="icon" width="20" height="20" style="position: absolute; margin: 2px 4px;" src="static/img/player/play.svg" onclick="play_video()"/>
+              <input type="range" id="preview_video_volume" style="display: none;" name="" min="0" max="100" value="50" step="1" oninput="set_volume_video(this.value)" onchange="set_volume_video(this.value)">
+              <input type="range" id="preview_video_input_duration" style="position: absolute; left: 30px; right: 25px; bottom: 8px" name="" min="0" max="100" value="0" step="1" onchange="set_duration_video(this.value)" onmouseover="video_duration_hover = true" onmouseout="video_duration_hover = false" onmousemove="showTooltip_video_duration(event)">
+              <img id="preview_fullscreen_video" class="icon" width="20" height="20" style="position: absolute; margin: 2px 4px; right: 0px" src="static/img/player/fullscreen.svg" onclick="full_screen()"/>
+              <div class="preview_video_duration_info" id="preview_video_duration_info">
+                <p id="preview_video_duration_info_p"></p>
+              </div>
+            </div>
           </div>
 
-          <div class="preview_image" id="preview_audio_div">
-            <audio id="preview_audio" style="margin: 5px 0px" width="300px" controls></audio>
+          <div class="preview_audio block_select" id="preview_audio_div" style="height: 50px; cursor: default;">
+            <audio id="preview_audio" style="margin: 5px 0px; display: none" width="300px" controls></audio>
+            <img id="preview_play_pause_audio" class="icon" width="40" height="40" style="position: absolute; margin: 6px 4px;" src="static/img/player/play.svg" onclick="play_audio()"/>
+            <img class="icon" width="20" height="20" style="position: absolute; left: 45px;" src="static/img/player/back.svg"/>
+            <img class="icon" style="transform: rotate(-180deg); position: absolute; right: 4px;" width="20" height="20" src="static/img/player/back.svg"/>
+            <input id="preview_audio_name" class="preview_audio_name" style="left: 80px; right: 40px; margin-top: 4px;" type=text placeholder="file name" onkeypress="" readonly>
+            <input type="range" id="preview_audio_volume" style="display: none" name="cowbell" min="0" max="100" value="50" step="1" oninput="set_volume_audio(this.value)" onchange="set_volume_audio(this.value)">
+            <input type="range" id="preview_audio_input_duration" style="position: absolute; left: 45px; right: -4px; bottom: 5px" name="cowbell" min="0" max="100" value="0" step="1" onchange="set_duration_audio(this.value)" onmouseover="audio_duration_hover = true" onmouseout="audio_duration_hover = false">
           </div>
 
         </div>
@@ -375,6 +390,21 @@
       </div>
     </div>
 
+    <!--видео в полный экран-->
+    <div id="preview_video_fullscreen_div" class="preview_video_fullscreen" style="display: none">
+      <video id="preview_video_fullscreen" class="preview_video_fullscreen_video" onclick="play_video()"></video>
+      <div class="preview_video_fullscreen_controls">
+        <img id="preview_play_pause_video_fullscreen" class="icon" width="20" height="20" style="position: absolute; margin: 2px 4px;" src="static/img/player/play.svg" onclick="play_video()"/>
+        <input type="range" id="preview_video_volume_fullscreen" style="display: none;" name="" min="0" max="100" value="50" step="1" oninput="set_volume_video(this.value)" onchange="set_volume_video(this.value)">
+        <input type="range" id="preview_video_input_duration_fullscreen" style="position: absolute; left: 30px; right: 30px; bottom: 8px" name="" min="0" max="100" value="0" step="0.1" onchange="set_duration_video(this.value)" onmouseover="video_duration_hover = true" onmouseout="video_duration_hover = false" onmousemove="showTooltip_video_duration(event)">
+        <img id="preview_fullscreen_video_fullscreen" class="icon" width="20" height="20" style="position: absolute; margin: 2px 4px; right: 0px" src="static/img/player/fullscreen.svg" onclick="full_screen()"/>
+
+        <div class="preview_video_duration_info" id="preview_video_duration_info_fullscreen">
+          <p id="preview_video_duration_info_p_fullscreen"></p>
+        </div>
+      </div>
+    </div>
+
     <input name="fileElem" type="file" id="fileElem" style="display: none;" multiple onchange="uploadFile(this.files)">
 
   </body>
@@ -391,6 +421,7 @@
   <script type="text/javascript" src="static/js/info.1.js"></script>
   <script type="text/javascript" src="static/js/user.1.js"></script>
   <script type="text/javascript" src="static/js/upload_file.1.js"></script>
+  <script type="text/javascript" src="static/js/player.1.js"></script>
   <script type="text/javascript" src="static/js/file.1.js"></script>
 
 </html>
