--- a/app/static/css/rightBar.1.css
+++ b/app/static/css/rightBar.1.css
@@ -133,7 +133,7 @@
   width: 100%;
   height: 100%;
 
-  background-color: var(--bg-color);
+  background-color: #000;
 }
 
 .preview_video_fullscreen img {
@@ -143,10 +143,10 @@
 
 .preview_video_fullscreen_video {
   position: fixed;
-  top: 25px;
+  top: 0px;
   left: 0px;
   width: 100%;
-  height: calc(100% - 50px);
+  height: calc(100% - 25px);
 }
 
 .preview_video_fullscreen_controls {
