теперь нельзя перетаскивать внутренности страницы

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -19,7 +19,7 @@
 
   </head>
 
-  <body class="scroll_style">
+  <body class="scroll_style" ondragstart="return false;" ondrop="return false;">
 
     <div id="file_list_div" class="file_list">
       <ul id="file_list" style="overflow-x:hidden;"></ul>
